class Ticket:
    def __init__(self):
        self.price = 1
        self.is_valid = True